[project]
name = "gis-intro-rcaas-rse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-pymongo>=3.0.1",
    "gunicorn>=26.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "mkdocstrings-python>=2.0.3",
]
