[project]
name = "gis-intro-rcaas-rse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-pymongo>=3.0.1",
    "gunicorn>=26.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "mkdocstrings-python>=2.0.3",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gis_intro_rcaas_rse"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
    "B",  # bugbear
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
